# dogmatics-search

./: .env-sample  .gitignore  parse-dogmatics.ipynb  pyproject.toml  readme.md
backend/: .env.example  api-test.ipynb  main.py  pyproject.toml
backend/app/: database.py  response.py  settings.py
data-prep/: .env.example  parse-dogmatics-full.ipynb  parse-dogmatics-test.ipynb  pinecone-test.ipynb  prompt-testing.ipynb  pyproject.toml  vectorize-and-store.ipynb
frontend/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
frontend/src/components/: QuestionForm.tsx  Response.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
