[tool.poetry]
name = "dogmatics-rag-backend"
version = "0.1.0"
description = ""
authors = ["Scott Bailey <csb5t@virginia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
fastapi = "^0.110.2"
pinecone-client = "^3.2.2"
cohere = "^5.3.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
openai = "^1.23.2"
pydantic = "^2.7.0"
llama-index = "^0.10.30"
llama-index-llms-cohere = "^0.1.6"
llama-index-llms-openai = "^0.1.16"
llama-index-vector-stores-pinecone = "^0.1.4"
requests = "^2.31.0"
comet-llm = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
black = "^24.4.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
