[tool.poetry]
name = "dogmatics-search"
version = "0.1.0"
description = ""
authors = ["Scott Bailey <csb5t@virginia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.1.5"
ipykernel = "^6.29.1"
langchain-community = "^0.0.19"
pandas = "^2.2.1"
llama-index = "^0.10.29"
llama-index-llms-cohere = "^0.1.6"
cohere = "^5.2.6"
python-dotenv = "^1.0.1"
pinecone-client = "^3.2.2"
llama-index-embeddings-cohere = "^0.1.7"
llama-index-vector-stores-pinecone = "^0.1.4"
llama-index-readers-file = "^0.1.19"
llama-index-postprocessor-cohere-rerank = "^0.1.4"
pyarrow = "^16.0.0"
openai = "^1.23.2"
comet-llm = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
